--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+ToonTanksProjectSetup_4.25/ToonTanks/Binaries/Win64/ToonTanks.pdb
