--- a/ToonTanksProjectSetup_4.25/ToonTanks/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ToonTanksProjectSetup_4.25/ToonTanks/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,6 +131,7 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ComponentsActor.ComponentsActor
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -185,6 +186,46 @@ BP_Sky_Sphere_C.Collision=True
 BP_Sky_Sphere_C.HLOD=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+ComponentsActor_C.Tick=True
+ComponentsActor_C.Replication=True
+ComponentsActor_C.Rendering=True
+ComponentsActor_C.Collision=True
+ComponentsActor_C.Actor=True
+ComponentsActor_C.Input=True
+ComponentsActor_C.HLOD=True
+ComponentsActor_C.WorldPartition=True
+ComponentsActor_C.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1094,8 +1135,12 @@ Cascade.TimeStamp=2022.09.12-20.14.28
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2022.09.12-20.14.29
 DistCurveEditor.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2022.11.21-23.10.01
-ToonTanks.LastCompileMethod=Unknown
+ToonTanks.TimeStamp=2022.11.21-23.24.10
+ToonTanks.LastCompileMethod=Runtime
+BlueprintGraph.TimeStamp=2022.09.12-20.14.28
+BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.09.12-20.14.31
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1149,7 +1194,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/ToonTanks
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1159,17 +1204,71 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Effects/P_ProjectileTrail
-MRUItem1=/Game/Assets/Effects/P_DeathEffect
-MRUItem2=/Game/Assets/Effects/P_HitEffect
+MRUItem0=/Game/ComponentsActor
+MRUItem1=/Game/Assets/Effects/P_ProjectileTrail
+MRUItem2=/Game/Assets/Effects/P_DeathEffect
+MRUItem3=/Game/Assets/Effects/P_HitEffect
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Effects/P_DeathEffect.P_DeathEffect=1
 /Game/Assets/Effects/P_HitEffect.P_HitEffect=1
 /Game/Assets/Effects/P_ProjectileTrail.P_ProjectileTrail=1
+/Game/ComponentsActor.ComponentsActor=0
 
 [CascadeEditor]
 LightDir=P=-45.000000 Y=180.000000 R=0.000000
+
+[/Script/LiveCoding.LiveCodingSettings]
+bEnabled=False
+bPreloadEngineModules=False
+bPreloadEnginePluginModules=False
+bPreloadProjectModules=True
+bPreloadProjectPluginModules=True
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
