--- a/ToonTanksProjectSetup_4.25/ToonTanks/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ToonTanksProjectSetup_4.25/ToonTanks/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,7 +131,6 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ComponentsActor.ComponentsActor
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -226,6 +225,16 @@ StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
 StaticMeshComponent.Materials=True
+BasePawn.TransformCommon=True
+BasePawn.BasePawn=True
+BasePawn.Pawn=True
+BasePawn.Camera=True
+BasePawn.Rendering=True
+BasePawn.Replication=True
+BasePawn.Collision=True
+BasePawn.HLOD=True
+BasePawn.Input=True
+BasePawn.Actor=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -251,7 +260,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Github/TankDemo/ToonTanksProjectSetup_4.25/ToonTanks/Content/
+UNR=D:/Github/TankDemo/ToonTanksProjectSetup_4.25/ToonTanks/Content/Maps
 BRUSH=D:/Github/TankDemo/ToonTanksProjectSetup_4.25/ToonTanks/Content/
 FBX=D:/Github/TankDemo/ToonTanksProjectSetup_4.25/ToonTanks/Content/
 FBXAnim=D:/Github/TankDemo/ToonTanksProjectSetup_4.25/ToonTanks/Content/
@@ -1135,7 +1144,7 @@ Cascade.TimeStamp=2022.09.12-20.14.28
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2022.09.12-20.14.29
 DistCurveEditor.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2022.11.21-23.24.10
+ToonTanks.TimeStamp=2022.11.29-00.04.24
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2022.09.12-20.14.28
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1194,7 +1203,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/ToonTanks
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1271,4 +1280,10 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[MRU]
+MRUItem0=/Game/Maps/Main
+
+[PlacementMode]
+RecentlyPlaced=/Script/ToonTanks.BasePawn;
 
